tests/typecheck/fail/byte_non_literal_narrowing.tw
n: Int = 10
b: Byte = n
